src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDNOTEQUAL
    ELLIPSIS
    FALSE
    INTERFACE
    IOTA
    MAP
    NIL
    NOT
    RANGE
    TRUE

Grammar

Rule 0     S' -> Start
Rule 1     Start -> SourceFile
Rule 2     SourceFile -> RepeatNewline PackageClause ImportClause A RepeatTopLevelDecl
Rule 3     A -> empty
Rule 4     PackageClause -> PACKAGE PackageName StatementEnd
Rule 5     PackageName -> ID
Rule 6     ImportClause -> ImportStmt StatementEnd ImportClause
Rule 7     ImportClause -> empty
Rule 8     ImportStmt -> IMPORT Import
Rule 9     ImportStmt -> IMPORT LPAREN StatementEnd ImportList RPAREN
Rule 10    ImportList -> Import StatementEnd ImportList
Rule 11    ImportList -> Import StatementEnd
Rule 12    ImportList -> Import
Rule 13    Import -> ID STRINGVAL
Rule 14    Import -> STRINGVAL
Rule 15    RepeatTopLevelDecl -> TopLevelDecl StatementEnd RepeatTopLevelDecl
Rule 16    RepeatTopLevelDecl -> TopLevelDecl
Rule 17    RepeatTopLevelDecl -> empty
Rule 18    TopLevelDecl -> Declaration
Rule 19    TopLevelDecl -> FunctionDecl
Rule 20    StatementList -> Statement StatementEnd StatementList
Rule 21    StatementList -> Statement
Rule 22    StatementList -> empty
Rule 23    Statement -> Declaration
Rule 24    Statement -> LabeledStmt
Rule 25    Statement -> SimpleStmt
Rule 26    Statement -> ReturnStmt
Rule 27    Statement -> BreakStmt
Rule 28    Statement -> ContinueStmt
Rule 29    Statement -> FallthroughStmt
Rule 30    Statement -> GotoStmt
Rule 31    Statement -> Block
Rule 32    Statement -> IfStmt
Rule 33    Statement -> SwitchStmt
Rule 34    Statement -> ForStmt
Rule 35    Statement -> DeferStmt
Rule 36    Statement -> PrintStmt
Rule 37    Statement -> ScanIntStmt
Rule 38    Statement -> ScanStrStmt
Rule 39    Declaration -> ConstDecl
Rule 40    Declaration -> TypeDecl
Rule 41    Declaration -> VarDecl
Rule 42    ConstDecl -> CONST ConstSpec
Rule 43    ConstSpec -> IdentifierList Types
Rule 44    ConstSpec -> IdentifierList Types EQUALS ExpressionList
Rule 45    TypeDecl -> TYPE RepeatNewline TypeSpec
Rule 46    TypeSpec -> TypeDef
Rule 47    TypeDef -> ID K Types
Rule 48    K -> empty
Rule 49    VarDecl -> VAR RepeatNewline VarSpec
Rule 50    VarSpec -> IdentifierList Types
Rule 51    VarSpec -> IdentifierList Types EQUALS RepeatNewline ExpressionList
Rule 52    FunctionDecl -> FunctionMarker FunctionBody
Rule 53    FunctionDecl -> FunctionMarker
Rule 54    FunctionMarker -> FUNC RepeatNewline FunctionName Signature
Rule 55    FunctionName -> ID
Rule 56    Signature -> Parameters
Rule 57    Signature -> Parameters Result
Rule 58    Parameters -> LPAREN RepeatNewline RPAREN
Rule 59    Parameters -> LPAREN RepeatNewline ParameterList RPAREN
Rule 60    ParameterList -> ParameterDecl RepeatParameterDecl
Rule 61    RepeatParameterDecl -> COMMA RepeatNewline ParameterDecl RepeatParameterDecl
Rule 62    RepeatParameterDecl -> empty
Rule 63    ParameterDecl -> ID Types
Rule 64    ParameterDecl -> Types
Rule 65    Result -> Types
Rule 66    FunctionBody -> Block
Rule 67    LabeledStmt -> Label COLON RepeatNewline Statement
Rule 68    Label -> ID
Rule 69    SimpleStmt -> Assignment
Rule 70    SimpleStmt -> ShortVarDecl
Rule 71    SimpleStmt -> IncDecStmt
Rule 72    SimpleStmt -> ExpressionStmt
Rule 73    ExpressionStmt -> Expression
Rule 74    IncDecStmt -> Expression INCR
Rule 75    IncDecStmt -> Expression DECR
Rule 76    AssignOp -> TIMESEQUAL
Rule 77    AssignOp -> DIVEQUAL
Rule 78    AssignOp -> MODEQUAL
Rule 79    AssignOp -> PLUSEQUAL
Rule 80    AssignOp -> MINUSEQUAL
Rule 81    AssignOp -> LSHIFTEQUAL
Rule 82    AssignOp -> RSHIFTEQUAL
Rule 83    AssignOp -> ANDEQUAL
Rule 84    AssignOp -> OREQUAL
Rule 85    AssignOp -> XOREQUAL
Rule 86    Assignment -> ExpressionList AssignOp RepeatNewline ExpressionList
Rule 87    Assignment -> ExpressionList EQUALS RepeatNewline ExpressionList
Rule 88    Assignment -> ExpressionList EQUALS MallocExp
Rule 89    Assignment -> ExpressionList EQUALS SinExp
Rule 90    Assignment -> ExpressionList EQUALS CosExp
Rule 91    Assignment -> ExpressionList EQUALS OpenFileExp
Rule 92    Assignment -> ReadFileExp
Rule 93    Assignment -> WriteFileExp
Rule 94    Assignment -> CloseFileExp
Rule 95    Assignment -> ExpressionList EQUALS NULL
Rule 96    ShortVarDecl -> ID AUTOASIGN RepeatNewline Expression
Rule 97    ReturnStmt -> RETURN
Rule 98    ReturnStmt -> RETURN ExpressionList
Rule 99    FallthroughStmt -> FALLTHROUGH
Rule 100   BreakStmt -> BREAK
Rule 101   BreakStmt -> BREAK Label
Rule 102   ContinueStmt -> CONTINUE
Rule 103   ContinueStmt -> CONTINUE Label
Rule 104   GotoStmt -> GOTO Label
Rule 105   Block -> LBRACE RepeatNewline StatementList RBRACE
Rule 106   IfExp -> IfMarker RepeatNewline Expression
Rule 107   IfStmt -> IF IfExp Block
Rule 108   IfStmt -> IF IfExp Block EndIfMarker ELSE ElseMarker Block
Rule 109   IfStmt -> IF IfExp Block EndIfMarker ELSE IfStmt
Rule 110   IfMarker -> empty
Rule 111   EndIfMarker -> empty
Rule 112   ElseMarker -> empty
Rule 113   SwitchStmt -> ExprSwitchStmt
Rule 114   ExprSwitchStmt -> SWITCH RepeatNewline Expression LBRACE RepeatNewline Exp_Inh RepeatExprCaseClause RBRACE
Rule 115   Exp_Inh -> empty
Rule 116   RepeatExprCaseClause -> ExprCaseClause RepeatExprCaseClause
Rule 117   RepeatExprCaseClause -> empty
Rule 118   ExprCaseClause -> ExprSwitchCase COLON RepeatNewline StatementList
Rule 119   ExprSwitchCase -> CASE CaseMarker RepeatNewline Expression
Rule 120   ExprSwitchCase -> DEFAULT DefaultMarker RepeatNewline
Rule 121   CaseMarker -> empty
Rule 122   DefaultMarker -> empty
Rule 123   ForStmt -> FOR ForMarker RepeatNewline Block
Rule 124   ForStmt -> FOR ForMarker RepeatNewline Condition Block
Rule 125   ForStmt -> FOR ForMarker RepeatNewline ForClause Block
Rule 126   ForMarker -> empty
Rule 127   ForClause -> terminator terminator
Rule 128   ForClause -> InitStmt terminator terminator
Rule 129   ForClause -> terminator Condition terminator
Rule 130   ForClause -> terminator terminator PostStmt
Rule 131   ForClause -> InitStmt terminator Condition terminator
Rule 132   ForClause -> InitStmt terminator terminator PostStmt
Rule 133   ForClause -> terminator Condition terminator PostStmt
Rule 134   ForClause -> InitStmt terminator Condition terminator PostStmt
Rule 135   InitStmt -> SimpleStmt
Rule 136   PostStmt -> SimpleStmt
Rule 137   Condition -> Expression
Rule 138   DeferStmt -> DEFER PrimaryExpr Arguments
Rule 139   PrintStmt -> PrintIntStmt
Rule 140   PrintStmt -> PrintStrStmt
Rule 141   PrintStmt -> PrintFloatStmt
Rule 142   PrintIntStmt -> PRINTINT Expression
Rule 143   PrintFloatStmt -> PRINTFLOAT Expression
Rule 144   PrintStrStmt -> PRINTSTR Expression
Rule 145   ScanIntStmt -> SCANINT Expression
Rule 146   ScanStrStmt -> SCANSTR Expression
Rule 147   ExpressionList -> Expression
Rule 148   ExpressionList -> Expression COMMA RepeatNewline ExpressionList
Rule 149   Expression -> Expression LOR RepeatNewline Term1
Rule 150   Expression -> Term1
Rule 151   Term1 -> Term1 LAND RepeatNewline Term2
Rule 152   Term1 -> Term2
Rule 153   Term2 -> Term2 Relop RepeatNewline Term3
Rule 154   Term2 -> Term3
Rule 155   Relop -> LT
Rule 156   Relop -> GT
Rule 157   Relop -> LE
Rule 158   Relop -> GE
Rule 159   Relop -> EQ
Rule 160   Relop -> NE
Rule 161   Term3 -> Term3 PLUS RepeatNewline Term4
Rule 162   Term3 -> Term3 MINUS RepeatNewline Term4
Rule 163   Term3 -> Term3 OR RepeatNewline Term4
Rule 164   Term3 -> Term3 XOR RepeatNewline Term4
Rule 165   Term3 -> NULL
Rule 166   Term3 -> Term4
Rule 167   Term4 -> Term4 TIMES RepeatNewline Term5
Rule 168   Term4 -> Term4 DIVIDE RepeatNewline Term5
Rule 169   Term4 -> Term4 MODULO RepeatNewline Term5
Rule 170   Term4 -> Term4 LSHIFT RepeatNewline Term5
Rule 171   Term4 -> Term4 RSHIFT RepeatNewline Term5
Rule 172   Term4 -> Term4 AND RepeatNewline Term5
Rule 173   Term4 -> Term4 ANDNOT RepeatNewline Term5
Rule 174   Term4 -> Term5
Rule 175   Term5 -> UnaryExp
Rule 176   UnaryExp -> PrimaryExpr
Rule 177   UnaryExp -> Literal
Rule 178   UnaryExp -> UnaryOp RepeatNewline UnaryExp
Rule 179   UnaryOp -> PLUS
Rule 180   UnaryOp -> MINUS
Rule 181   UnaryOp -> LNOT
Rule 182   UnaryOp -> TIMES
Rule 183   UnaryOp -> AND
Rule 184   PrimaryExpr -> OperandName2
Rule 185   PrimaryExpr -> PrimaryExpr Selector
Rule 186   PrimaryExpr -> PrimaryExpr Index
Rule 187   PrimaryExpr -> PrimaryExpr Arguments
Rule 188   PrimaryExpr -> LPAREN RepeatNewline Expression RPAREN
Rule 189   Literal -> BasicLit
Rule 190   Literal -> CompositeLit
Rule 191   BasicLit -> intLit
Rule 192   BasicLit -> floatLit
Rule 193   BasicLit -> stringLit
Rule 194   intLit -> INTEGER
Rule 195   floatLit -> FLOAT
Rule 196   stringLit -> STRINGVAL
Rule 197   stringLit -> CHARACTER
Rule 198   CompositeLit -> LiteralType LiteralValue
Rule 199   LiteralType -> ArrayType
Rule 200   LiteralType -> StructType
Rule 201   LiteralType -> SliceType
Rule 202   Mytypes -> BOOL
Rule 203   Mytypes -> BYTE
Rule 204   Mytypes -> INT
Rule 205   Mytypes -> UINT8
Rule 206   Mytypes -> UINT16
Rule 207   Mytypes -> UINT32
Rule 208   Mytypes -> UINT64
Rule 209   Mytypes -> INT8
Rule 210   Mytypes -> INT16
Rule 211   Mytypes -> INT32
Rule 212   Mytypes -> INT64
Rule 213   Mytypes -> UINT
Rule 214   Mytypes -> FLOAT32
Rule 215   Mytypes -> FLOAT64
Rule 216   Mytypes -> UINTPTR
Rule 217   Mytypes -> STRING
Rule 218   Mytypes -> ERROR
Rule 219   Types -> Mytypes
Rule 220   Types -> TypeLit
Rule 221   Types -> OperandName
Rule 222   TypeLit -> StructType
Rule 223   TypeLit -> ArrayType
Rule 224   TypeLit -> PointerType
Rule 225   TypeLit -> SliceType
Rule 226   SliceType -> LBRACKET RBRACKET Types
Rule 227   PointerType -> TIMES Types
Rule 228   StructType -> STRUCT M RepeatNewline LBRACE RepeatNewline RepeatFieldDecl RBRACE
Rule 229   M -> empty
Rule 230   RepeatFieldDecl -> FieldDecl StatementEnd RepeatFieldDecl
Rule 231   RepeatFieldDecl -> FieldDecl
Rule 232   RepeatFieldDecl -> empty
Rule 233   FieldDecl -> IdentifierList Types
Rule 234   ArrayType -> LBRACKET RepeatNewline ArrayLength RBRACKET Types
Rule 235   ArrayLength -> INTEGER
Rule 236   LiteralValue -> LBRACE RepeatNewline RBRACE
Rule 237   LiteralValue -> LBRACE RepeatNewline ElementList RBRACE
Rule 238   ElementList -> KeyedElement RepeatKeyedElement
Rule 239   RepeatKeyedElement -> COMMA RepeatNewline KeyedElement RepeatKeyedElement
Rule 240   RepeatKeyedElement -> empty
Rule 241   KeyedElement -> Element
Rule 242   Element -> BasicLit
Rule 243   OperandName -> ID
Rule 244   OperandName2 -> ID
Rule 245   Selector -> PERIOD RepeatNewline ID
Rule 246   Index -> LBRACKET RepeatNewline Expression RBRACKET
Rule 247   Arguments -> LPAREN RepeatNewline ExpressionList RPAREN
Rule 248   Arguments -> LPAREN RepeatNewline RPAREN
Rule 249   IdentifierList -> ID
Rule 250   IdentifierList -> IdentifierList COMMA RepeatNewline ID
Rule 251   MallocExp -> MALLOC LPAREN Expression RPAREN
Rule 252   OpenFileExp -> OPENFILE LPAREN Expression COMMA Expression COMMA Expression RPAREN
Rule 253   ReadFileExp -> READFILE LPAREN Expression COMMA Expression COMMA Expression RPAREN
Rule 254   WriteFileExp -> WRITEFILE LPAREN Expression COMMA Expression COMMA Expression RPAREN
Rule 255   CloseFileExp -> CLOSEFILE LPAREN Expression RPAREN
Rule 256   SinExp -> SIN LPAREN Expression RPAREN
Rule 257   CosExp -> COS LPAREN Expression RPAREN
Rule 258   empty -> <empty>
Rule 259   terminator -> SEMI
Rule 260   StatementEnd -> terminator StatementEnd
Rule 261   StatementEnd -> newline StatementEnd
Rule 262   StatementEnd -> terminator
Rule 263   StatementEnd -> newline
Rule 264   RepeatNewline -> newline RepeatNewline
Rule 265   RepeatNewline -> empty

Terminals, with rules where they appear

AND                  : 172 183
ANDEQUAL             : 83
ANDNOT               : 173
ANDNOTEQUAL          : 
AUTOASIGN            : 96
BOOL                 : 202
BREAK                : 100 101
BYTE                 : 203
CASE                 : 119
CHARACTER            : 197
CLOSEFILE            : 255
COLON                : 67 118
COMMA                : 61 148 239 250 252 252 253 253 254 254
CONST                : 42
CONTINUE             : 102 103
COS                  : 257
DECR                 : 75
DEFAULT              : 120
DEFER                : 138
DIVEQUAL             : 77
DIVIDE               : 168
ELLIPSIS             : 
ELSE                 : 108 109
EQ                   : 159
EQUALS               : 44 51 87 88 89 90 91 95
ERROR                : 218
FALLTHROUGH          : 99
FALSE                : 
FLOAT                : 195
FLOAT32              : 214
FLOAT64              : 215
FOR                  : 123 124 125
FUNC                 : 54
GE                   : 158
GOTO                 : 104
GT                   : 156
ID                   : 5 13 47 55 63 68 96 243 244 245 249 250
IF                   : 107 108 109
IMPORT               : 8 9
INCR                 : 74
INT                  : 204
INT16                : 210
INT32                : 211
INT64                : 212
INT8                 : 209
INTEGER              : 194 235
INTERFACE            : 
IOTA                 : 
LAND                 : 151
LBRACE               : 105 114 228 236 237
LBRACKET             : 226 234 246
LE                   : 157
LNOT                 : 181
LOR                  : 149
LPAREN               : 9 58 59 188 247 248 251 252 253 254 255 256 257
LSHIFT               : 170
LSHIFTEQUAL          : 81
LT                   : 155
MALLOC               : 251
MAP                  : 
MINUS                : 162 180
MINUSEQUAL           : 80
MODEQUAL             : 78
MODULO               : 169
NE                   : 160
NIL                  : 
NOT                  : 
NULL                 : 95 165
OPENFILE             : 252
OR                   : 163
OREQUAL              : 84
PACKAGE              : 4
PERIOD               : 245
PLUS                 : 161 179
PLUSEQUAL            : 79
PRINTFLOAT           : 143
PRINTINT             : 142
PRINTSTR             : 144
RANGE                : 
RBRACE               : 105 114 228 236 237
RBRACKET             : 226 234 246
READFILE             : 253
RETURN               : 97 98
RPAREN               : 9 58 59 188 247 248 251 252 253 254 255 256 257
RSHIFT               : 171
RSHIFTEQUAL          : 82
SCANINT              : 145
SCANSTR              : 146
SEMI                 : 259
SIN                  : 256
STRING               : 217
STRINGVAL            : 13 14 196
STRUCT               : 228
SWITCH               : 114
TIMES                : 167 182 227
TIMESEQUAL           : 76
TRUE                 : 
TYPE                 : 45
UINT                 : 213
UINT16               : 206
UINT32               : 207
UINT64               : 208
UINT8                : 205
UINTPTR              : 216
VAR                  : 49
WRITEFILE            : 254
XOR                  : 164
XOREQUAL             : 85
error                : 
newline              : 261 263 264

Nonterminals, with rules where they appear

A                    : 2
Arguments            : 138 187
ArrayLength          : 234
ArrayType            : 199 223
AssignOp             : 86
Assignment           : 69
BasicLit             : 189 242
Block                : 31 66 107 108 108 109 123 124 125
BreakStmt            : 27
CaseMarker           : 119
CloseFileExp         : 94
CompositeLit         : 190
Condition            : 124 129 131 133 134
ConstDecl            : 39
ConstSpec            : 42
ContinueStmt         : 28
CosExp               : 90
Declaration          : 18 23
DefaultMarker        : 120
DeferStmt            : 35
Element              : 241
ElementList          : 237
ElseMarker           : 108
EndIfMarker          : 108 109
Exp_Inh              : 114
ExprCaseClause       : 116
ExprSwitchCase       : 118
ExprSwitchStmt       : 113
Expression           : 73 74 75 96 106 114 119 137 142 143 144 145 146 147 148 149 188 246 251 252 252 252 253 253 253 254 254 254 255 256 257
ExpressionList       : 44 51 86 86 87 87 88 89 90 91 95 98 148 247
ExpressionStmt       : 72
FallthroughStmt      : 29
FieldDecl            : 230 231
ForClause            : 125
ForMarker            : 123 124 125
ForStmt              : 34
FunctionBody         : 52
FunctionDecl         : 19
FunctionMarker       : 52 53
FunctionName         : 54
GotoStmt             : 30
IdentifierList       : 43 44 50 51 233 250
IfExp                : 107 108 109
IfMarker             : 106
IfStmt               : 32 109
Import               : 8 10 11 12
ImportClause         : 2 6
ImportList           : 9 10
ImportStmt           : 6
IncDecStmt           : 71
Index                : 186
InitStmt             : 128 131 132 134
K                    : 47
KeyedElement         : 238 239
Label                : 67 101 103 104
LabeledStmt          : 24
Literal              : 177
LiteralType          : 198
LiteralValue         : 198
M                    : 228
MallocExp            : 88
Mytypes              : 219
OpenFileExp          : 91
OperandName          : 221
OperandName2         : 184
PackageClause        : 2
PackageName          : 4
ParameterDecl        : 60 61
ParameterList        : 59
Parameters           : 56 57
PointerType          : 224
PostStmt             : 130 132 133 134
PrimaryExpr          : 138 176 185 186 187
PrintFloatStmt       : 141
PrintIntStmt         : 139
PrintStmt            : 36
PrintStrStmt         : 140
ReadFileExp          : 92
Relop                : 153
RepeatExprCaseClause : 114 116
RepeatFieldDecl      : 228 230
RepeatKeyedElement   : 238 239
RepeatNewline        : 2 45 49 51 54 58 59 61 67 86 87 96 105 106 114 114 118 119 120 123 124 125 148 149 151 153 161 162 163 164 167 168 169 170 171 172 173 178 188 228 228 234 236 237 239 245 246 247 248 250 264
RepeatParameterDecl  : 60 61
RepeatTopLevelDecl   : 2 15
Result               : 57
ReturnStmt           : 26
ScanIntStmt          : 37
ScanStrStmt          : 38
Selector             : 185
ShortVarDecl         : 70
Signature            : 54
SimpleStmt           : 25 135 136
SinExp               : 89
SliceType            : 201 225
SourceFile           : 1
Start                : 0
Statement            : 20 21 67
StatementEnd         : 4 6 9 10 11 15 20 230 260 261
StatementList        : 20 105 118
StructType           : 200 222
SwitchStmt           : 33
Term1                : 149 150 151
Term2                : 151 152 153
Term3                : 153 154 161 162 163 164
Term4                : 161 162 163 164 166 167 168 169 170 171 172 173
Term5                : 167 168 169 170 171 172 173 174
TopLevelDecl         : 15 16
TypeDecl             : 40
TypeDef              : 46
TypeLit              : 220
TypeSpec             : 45
Types                : 43 44 47 50 51 63 64 65 226 227 233 234
UnaryExp             : 175 178
UnaryOp              : 178
VarDecl              : 41
VarSpec              : 49
WriteFileExp         : 93
empty                : 3 7 17 22 48 62 110 111 112 115 117 121 122 126 229 232 240 265
floatLit             : 192
intLit               : 191
stringLit            : 193
terminator           : 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 260 262

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . SourceFile
    (2) SourceFile -> . RepeatNewline PackageClause ImportClause A RepeatTopLevelDecl
    (264) RepeatNewline -> . newline RepeatNewline
    (265) RepeatNewline -> . empty
    (258) empty -> .

    newline         shift and go to state 4
    PACKAGE         reduce using rule 258 (empty -> .)

    Start                          shift and go to state 1
    SourceFile                     shift and go to state 2
    RepeatNewline                  shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> Start .



state 2

    (1) Start -> SourceFile .

    $end            reduce using rule 1 (Start -> SourceFile .)


state 3

    (2) SourceFile -> RepeatNewline . PackageClause ImportClause A RepeatTopLevelDecl
    (4) PackageClause -> . PACKAGE PackageName StatementEnd

    PACKAGE         shift and go to state 7

    PackageClause                  shift and go to state 6

state 4

    (264) RepeatNewline -> newline . RepeatNewline
    (264) RepeatNewline -> . newline RepeatNewline
    (265) RepeatNewline -> . empty
    (258) empty -> .

    newline         shift and go to state 4
    PACKAGE         reduce using rule 258 (empty -> .)
    ID              reduce using rule 258 (empty -> .)
    RETURN          reduce using rule 258 (empty -> .)
    BREAK           reduce using rule 258 (empty -> .)
    CONTINUE        reduce using rule 258 (empty -> .)
    FALLTHROUGH     reduce using rule 258 (empty -> .)
    GOTO            reduce using rule 258 (empty -> .)
    LBRACE          reduce using rule 258 (empty -> .)
    IF              reduce using rule 258 (empty -> .)
    FOR             reduce using rule 258 (empty -> .)
    DEFER           reduce using rule 258 (empty -> .)
    SCANINT         reduce using rule 258 (empty -> .)
    SCANSTR         reduce using rule 258 (empty -> .)
    CONST           reduce using rule 258 (empty -> .)
    TYPE            reduce using rule 258 (empty -> .)
    VAR             reduce using rule 258 (empty -> .)
    SWITCH          reduce using rule 258 (empty -> .)
    PRINTINT        reduce using rule 258 (empty -> .)
    PRINTSTR        reduce using rule 258 (empty -> .)
    PRINTFLOAT      reduce using rule 258 (empty -> .)
    READFILE        reduce using rule 258 (empty -> .)
    WRITEFILE       reduce using rule 258 (empty -> .)
    CLOSEFILE       reduce using rule 258 (empty -> .)
    NULL            reduce using rule 258 (empty -> .)
    LPAREN          reduce using rule 258 (empty -> .)
    PLUS            reduce using rule 258 (empty -> .)
    MINUS           reduce using rule 258 (empty -> .)
    LNOT            reduce using rule 258 (empty -> .)
    TIMES           reduce using rule 258 (empty -> .)
    AND             reduce using rule 258 (empty -> .)
    INTEGER         reduce using rule 258 (empty -> .)
    FLOAT           reduce using rule 258 (empty -> .)
    STRINGVAL       reduce using rule 258 (empty -> .)
    CHARACTER       reduce using rule 258 (empty -> .)
    LBRACKET        reduce using rule 258 (empty -> .)
    STRUCT          reduce using rule 258 (empty -> .)
    RBRACE          reduce using rule 258 (empty -> .)
    RPAREN          reduce using rule 258 (empty -> .)
    BOOL            reduce using rule 258 (empty -> .)
    BYTE            reduce using rule 258 (empty -> .)
    INT             reduce using rule 258 (empty -> .)
    UINT8           reduce using rule 258 (empty -> .)
    UINT16          reduce using rule 258 (empty -> .)
    UINT32          reduce using rule 258 (empty -> .)
    UINT64          reduce using rule 258 (empty -> .)
    INT8            reduce using rule 258 (empty -> .)
    INT16           reduce using rule 258 (empty -> .)
    INT32           reduce using rule 258 (empty -> .)
    INT64           reduce using rule 258 (empty -> .)
    UINT            reduce using rule 258 (empty -> .)
    FLOAT32         reduce using rule 258 (empty -> .)
    FLOAT64         reduce using rule 258 (empty -> .)
    UINTPTR         reduce using rule 258 (empty -> .)
    STRING          reduce using rule 258 (empty -> .)
    ERROR           reduce using rule 258 (empty -> .)
    SEMI            reduce using rule 258 (empty -> .)
    CASE            reduce using rule 258 (empty -> .)
    DEFAULT         reduce using rule 258 (empty -> .)
    COLON           reduce using rule 258 (empty -> .)

    RepeatNewline                  shift and go to state 8
    empty                          shift and go to state 5

state 5

    (265) RepeatNewline -> empty .

    PACKAGE         reduce using rule 265 (RepeatNewline -> empty .)
    ID              reduce using rule 265 (RepeatNewline -> empty .)
    RETURN          reduce using rule 265 (RepeatNewline -> empty .)
    BREAK           reduce using rule 265 (RepeatNewline -> empty .)
    CONTINUE        reduce using rule 265 (RepeatNewline -> empty .)
    FALLTHROUGH     reduce using rule 265 (RepeatNewline -> empty .)
    GOTO            reduce using rule 265 (RepeatNewline -> empty .)
    LBRACE          reduce using rule 265 (RepeatNewline -> empty .)
    IF              reduce using rule 265 (RepeatNewline -> empty .)
    FOR             reduce using rule 265 (RepeatNewline -> empty .)
    DEFER           reduce using rule 265 (RepeatNewline -> empty .)
    SCANINT         reduce using rule 265 (RepeatNewline -> empty .)
    SCANSTR         reduce using rule 265 (RepeatNewline -> empty .)
    CONST           reduce using rule 265 (RepeatNewline -> empty .)
    TYPE            reduce using rule 265 (RepeatNewline -> empty .)
    VAR             reduce using rule 265 (RepeatNewline -> empty .)
    SWITCH          reduce using rule 265 (RepeatNewline -> empty .)
    PRINTINT        reduce using rule 265 (RepeatNewline -> empty .)
    PRINTSTR        reduce using rule 265 (RepeatNewline -> empty .)
    PRINTFLOAT      reduce using rule 265 (RepeatNewline -> empty .)
    READFILE        reduce using rule 265 (RepeatNewline -> empty .)
    WRITEFILE       reduce using rule 265 (RepeatNewline -> empty .)
    CLOSEFILE       reduce using rule 265 (RepeatNewline -> empty .)
    NULL            reduce using rule 265 (RepeatNewline -> empty .)
    LPAREN          reduce using rule 265 (RepeatNewline -> empty .)
    PLUS            reduce using rule 265 (RepeatNewline -> empty .)
    MINUS           reduce using rule 265 (RepeatNewline -> empty .)
    LNOT            reduce using rule 265 (RepeatNewline -> empty .)
    TIMES           reduce using rule 265 (RepeatNewline -> empty .)
    AND             reduce using rule 265 (RepeatNewline -> empty .)
    INTEGER         reduce using rule 265 (RepeatNewline -> empty .)
    FLOAT           reduce using rule 265 (RepeatNewline -> empty .)
    STRINGVAL       reduce using rule 265 (RepeatNewline -> empty .)
    CHARACTER       reduce using rule 265 (RepeatNewline -> empty .)
    LBRACKET        reduce using rule 265 (RepeatNewline -> empty .)
    STRUCT          reduce using rule 265 (RepeatNewline -> empty .)
    RBRACE          reduce using rule 265 (RepeatNewline -> empty .)
    RPAREN          reduce using rule 265 (RepeatNewline -> empty .)
    BOOL            reduce using rule 265 (RepeatNewline -> empty .)
    BYTE            reduce using rule 265 (RepeatNewline -> empty .)
    INT             reduce using rule 265 (RepeatNewline -> empty .)
    UINT8           reduce using rule 265 (RepeatNewline -> empty .)
    UINT16          reduce using rule 265 (RepeatNewline -> empty .)
    UINT32          reduce using rule 265 (RepeatNewline -> empty .)
    UINT64          reduce using rule 265 (RepeatNewline -> empty .)
    INT8            reduce using rule 265 (RepeatNewline -> empty .)
    INT16           reduce using rule 265 (RepeatNewline -> empty .)
    INT32           reduce using rule 265 (RepeatNewline -> empty .)
    INT64           reduce using rule 265 (RepeatNewline -> empty .)
    UINT            reduce using rule 265 (RepeatNewline -> empty .)
    FLOAT32         reduce using rule 265 (RepeatNewline -> empty .)
    FLOAT64         reduce using rule 265 (RepeatNewline -> empty .)
    UINTPTR         reduce using rule 265 (RepeatNewline -> empty .)
    STRING          reduce using rule 265 (RepeatNewline -> empty .)
    ERROR           reduce using rule 265 (RepeatNewline -> empty .)
    SEMI            reduce using rule 265 (RepeatNewline -> empty .)
    CASE            reduce using rule 265 (RepeatNewline -> empty .)
    DEFAULT         reduce using rule 265 (RepeatNewline -> empty .)
    COLON           reduce using rule 265 (RepeatNewline -> empty .)


state 6

    (2) SourceFile -> RepeatNewline PackageClause . ImportClause A RepeatTopLevelDecl
    (6) ImportClause -> . ImportStmt StatementEnd ImportClause
    (7) ImportClause -> . empty
    (8) ImportStmt -> . IMPORT Import
    (9) ImportStmt -> . IMPORT LPAREN StatementEnd ImportList RPAREN
    (258) empty -> .

    IMPORT          shift and go to state 12
    CONST           reduce using rule 258 (empty -> .)
    TYPE            reduce using rule 258 (empty -> .)
    VAR             reduce using rule 258 (empty -> .)
    FUNC            reduce using rule 258 (empty -> .)
    $end            reduce using rule 258 (empty -> .)

    ImportClause                   shift and go to state 9
    ImportStmt                     shift and go to state 10
    empty                          shift and go to state 11

state 7

    (4) PackageClause -> PACKAGE . PackageName StatementEnd
    (5) PackageName -> . ID

    ID              shift and go to state 14

    PackageName                    shift and go to state 13

state 8

    (264) RepeatNewline -> newline RepeatNewline .
